2021-12-11  7.1.0-18  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.1.0-18 GIT revision 19...

2021-12-11  7.1.0-18  Dirk Lemstra <dirk@lem.....org>
  * Improved adjustment of page offset when resizing an image.

2021-12-04  7.1.0-17  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.1.0-17 GIT revision 19425:e66261ffe:20211204

2021-11-27  7.1.0-17  <quetzlzacatenango@image...>
  * set threads to 1 when using ASAN to avoid false positive memory leaks.

2021-11-21  7.1.0-16  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.1.0-16 GIT revision 19398:7dc99d829:20211121

2021-11-21  7.1.0-16  Dirk Lemstra <dirk@lem.....org>
  * Fixed an OpenCL build problem.

2021-11-20  7.1.0-15  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.1.0-15 GIT revision 19380:8098f3335:20211120

2021-11-20  7.1.0-15  Dirk Lemstra <dirk@lem.....org>
  * Added support for reading extra channels in a PSD file (reference
    https://github.com/ImageMagick/ImageMagick/issues/4499).

2021-11-15  7.1.0-15  <quetzlzacatenango@image...>
  * Fix alpha channel calculation of arithmetic divide compose operator.

2021-11-13  7.1.0-14  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.1.0-14 GIT revision 19349:2ba5cdf42:20211114

2021-11-13  7.1.0-14  <quetzlzacatenango@image...>
  * Support '#' modifier to aspect ratio geometry (e.g., 3:2#).

2021-11-11  7.1.0-14  Dirk Lemstra <dirk@lem.....org>
  * The profile of a PSD file will no longer be copied to all the images, only
    the first returned image will contain the profile. To re-enable the old
    behavior add -define psd:replicate-profile=true.

2021-10-28  7.1.0-13  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.1.0-13 GIT revision 19325:987f36b50:20211028

2021-10-28  7.1.0-13  Dirk Lemstra <dirk@lem.....org>
  * Fix stack overflow when parsing malicious ps image file (report from
    Muhammad Aldo Firmansyah).
