@@ -1,6 +1,9 @@
 2021-12-11  7.1.0-18  <quetzlzacatenango@image...>
   * Release ImageMagick version 7.1.0-18 GIT revision 19...
 
+2021-12-11  7.1.0-18  <quetzlzacatenango@image...>
+  * support face index for font collections, e.g. msgothic.ttc[1].
+
 2021-12-11  7.1.0-18  Dirk Lemstra <dirk@lem.....org>
   * Improved adjustment of page offset when resizing an image.
 
